# velmwheel

./: .gitignore  .gitmodules  p109.pgm  p109.yaml  readme.md  source_me.bash
src/libraries/drivers/elmo_ethercat/: CMakeLists.txt  package.xml
src/libraries/drivers/elmo_ethercat/doc/: Doxyfile  conf.py  index.rst
src/libraries/drivers/elmo_ethercat/doc/src/: config.rst  device_registers.rst  driver.rst
src/libraries/drivers/ethercat/: CMakeLists.txt  package.xml
src/libraries/drivers/ethercat/doc/: CMakeLists.txt  Doxyfile  conf.py
src/libraries/drivers/ethercat/doc/plantuml/: common.plantuml  descriptors.plantuml  diagram.plantuml  master.plantuml  slave.plantuml  types.plantuml
src/libraries/drivers/ethercat/include/: ethercat.hpp
src/libraries/drivers/ethercat/include/ethercat/: common.hpp  config.hpp  descriptors.hpp  master.hpp  slave.hpp  types.hpp  utilities.hpp
src/libraries/drivers/ethercat/spike/: api_design_v3.cpp  ethercat_translators.cpp  ethercat_type_hierarchy.cpp  translator_wrapper_test.cpp
src/libraries/drivers/ethercat/tests/: CMakeLists.txt
src/libraries/drivers/ethercat/tests/src/: default_parser_test.cpp  eni_parsing_test.cpp
src/libraries/drivers/imu_ethercat/: CMakeLists.txt  package.xml
src/libraries/drivers/imu_ethercat/doc/: index.rst
src/libraries/drivers/imu_ethercat/doc/src/: device_registers.rst
src/libraries/ros/ament_cmake_gtest_ext/: CMakeLists.txt  package.xml
src/libraries/ros/ament_cmake_gtest_ext/cmake/: ament_add_gtest.cmake  ament_add_gtest_executable.cmake  ament_add_gtest_test.cmake  ament_find_gtest.cmake
src/libraries/ros/ament_cmake_gtest_ext/scripts/: ament_cmake_gtest_ext-extras.cmake
src/libraries/ros/robot_localization_api/: CMakeLists.txt  README.md  package.xml
src/libraries/ros/robot_localization_api/config/: dual_ekf_navsat_example.yaml  ekf.yaml  navsat_transform.yaml  ukf.yaml
src/libraries/ros/robot_localization_api/include/robot_localization/: navsat_transform.hpp  ros_filter.hpp
src/libraries/ros/robot_localization_api/src/: navsat_transform.cpp  robot_localization_listener_node.cpp  ros_filter.cpp
src/nodes/odometry_anomaly_detector/: package.xml  setup.cfg  setup.py
src/nodes/odometry_anomaly_detector/launch/: gather_data_from_random_movements_launch.py  gather_data_while_driving_square_launch.py
src/nodes/odometry_anomaly_detector/odometry_anomaly_detector/: corrupt_imu_data.py  detector_models.py  drive_square.py  gather_data.py  perform_random_moves.py  test_ae_on_saved_data.py  test_autoencoder_architectures.py  train_and_test_ae.py  train_autoencoder.py  train_imu_gan.py
src/nodes/pc_collector/: package.xml  setup.cfg  setup.py
src/nodes/pc_collector/pc_collector/: collect_pc.py
src/nodes/regex_forwarder/: package.xml  setup.cfg  setup.py
src/nodes/regex_forwarder/regex_forwarder/: __init__.py  regex_forwarder.py
src/velmwheel/bringup/velmwheel_drivers_bringup/: CMakeLists.txt  package.xml
src/velmwheel/bringup/velmwheel_drivers_bringup/config/: base_driver.yaml  ethercat_driver.yaml  imu_driver.yaml  left_laser_driver.yaml  right_laser_driver.yaml
src/velmwheel/bringup/velmwheel_drivers_bringup/launch/: drivers.launch.py
src/velmwheel/bringup/velmwheel_drivers_bringup/launch/components/: ethercat_driver.launch.py  laser_driver.launch.py
src/velmwheel/common/velmwheel_common/: CMakeLists.txt  package.xml
src/velmwheel/common/velmwheel_launch/: CMakeLists.txt  package.xml
src/velmwheel/common/velmwheel_launch/launch/: rviz.launch.py  state_publisher.launch.py
src/velmwheel/common/velmwheel_launch/velmwheel_launch/: node.py
src/velmwheel/common/velmwheel_model/: CMakeLists.txt  package.xml
src/velmwheel/common/velmwheel_model/include/velmwheel/: common.hpp  dimensions.hpp  math.hpp  params.hpp
src/velmwheel/common/velmwheel_model/models/: kinect.dae
src/velmwheel/common/velmwheel_model/urdf/: camera.urdf.xacro  imu.urdf.xacro  kinect.urdf.xacro  lidar.urdf.xacro  velmwheel.urdf.xacro
src/velmwheel/common/velmwheel_model/urdf/materials/: imu.urdf.xacro  lidar.urdf.xacro  velmwheel.urdf.xacro
src/velmwheel/common/velmwheel_model/velmwheel_model/: dimensions.py  math.py  params.py
src/velmwheel/common/velmwheel_msgs/: CMakeLists.txt  package.xml
src/velmwheel/common/velmwheel_msgs/msg/: Encoder.msg  EncoderRaw.msg  EncoderStamped.msg  Encoders.msg  EncodersStamped.msg  Wheel.msg  WheelEnum.msg  Wheels.msg
src/velmwheel/drivers/velmwheel_drivers/: CMakeLists.txt  package.xml
src/velmwheel/drivers/velmwheel_laser_driver/: CMakeLists.txt  package.xml
src/velmwheel/drivers/velmwheel_laser_driver/config/: left_laser_driver.yaml  right_laser_driver.yaml
src/velmwheel/drivers/velmwheel_laser_driver/config/sick/: left_laser_driver.yaml  right_laser_driver.yaml
src/velmwheel/drivers/velmwheel_laser_driver/launch/: laser_driver.launch.py  set_laser_ip.launch.py
src/velmwheel/drivers/velmwheel_laser_driver/src/: callbacks.cpp  configuration.cpp  laser_driver.cpp
src/velmwheel/drivers/velmwheel_laser_driver/velmwheel_laser_driver/: device_finder.py
src/velmwheel/drivers/velmwheel_twincat/: CMakeLists.txt  package.xml
src/velmwheel/drivers/velmwheel_twincat/project/: Velmwheel.sln  Velmwheel.tsproj  Velmwheel.tsproj.bak
src/velmwheel/middleware/velmwheel_base_controller/: CMakeLists.txt  package.xml
src/velmwheel/middleware/velmwheel_base_controller/launch/: base_controller.launch.py
src/velmwheel/middleware/velmwheel_base_controller/src/: base_controller.cpp
src/velmwheel/middleware/velmwheel_bias_estimator/: CMakeLists.txt  package.xml
src/velmwheel/middleware/velmwheel_bias_estimator/config/: bias_estimator.yaml
src/velmwheel/middleware/velmwheel_bias_estimator/launch/: bias_estimator.launch.py
src/velmwheel/middleware/velmwheel_bias_estimator/src/: bias_estimator.cpp
src/velmwheel/middleware/velmwheel_laser_odom/: CMakeLists.txt  package.xml
src/velmwheel/middleware/velmwheel_laser_odom/launch/: laser_odom.launch.py
src/velmwheel/middleware/velmwheel_middleware/: CMakeLists.txt  package.xml
(+1747 files in other folders)
