<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pc_collector</name>
  <version>0.0.0</version>
  <description>Package for gathering pointcloud messages</description>
  <maintainer email="dan.gield@gmail.com">Daniel Giełdowski</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
