<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <!-- Package's name -->
    <name>regex_forwarder</name>
    <!-- Package's version -->
    <version>0.0.0</version>
    <!-- Package's description -->
    <description>
    
    Utility node enabling echoing string content of the ROS topic to another topic with regex
    replacements applied
        
    </description>
    <!-- Package's author -->
    <author email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</author>
    <!-- Package's maintainer -->
    <maintainer email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</maintainer>
    <!-- Package's license -->
    <license>MIT</license>

    <!-- Package's runtime dependencies -->
    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <!-- Package's exports -->
    <export>
        <build_type>ament_python</build_type>
    </export>

</package>
