<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <!-- Package's name -->
    <name>imu_ethercat</name>
    <!-- Package's version -->
    <version>1.0.0</version>
    <!-- Package's description -->
    <description>
    
    C++ library providing hardware-independent implementation of the EtherCAT driver for proprietary IMU sensor board by B. Kaczor

    </description>
    <!-- Package's author -->
    <author email="krzysztof.pierczyk@gmail.com">Krzysiek Pierczyk</author>
    <!-- Package's maintainer -->
    <maintainer email="krzysztof.pierczyk@gmail.com">Krzysiek Pierczyk</maintainer>
    <!-- Package's license -->
    <license>BSD</license>
    
    <!-- Build tool dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>cmake_common</buildtool_depend>
    <buildtool_depend>doc_common</buildtool_depend>
    <!-- Package's build export dependencies (external libraries) -->
    <build_export_depend>ethercat</build_export_depend>
    <!-- Package's build dependencies (external libraries) -->
    <build_depend>ethercat</build_depend>
    <!-- Package's runtime dependencies (external libraries) -->
    <exec_depend>ethercat</exec_depend>

    <!-- Package's exports -->
    <export>
      <build_type>ament_cmake</build_type>
    </export>

</package>
