<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <!-- Package's name -->
    <name>velmwheel_drivers_bringup</name>
    <!-- Package's version -->
    <version>0.0.0</version>
    <!-- Package's description -->
    <description>Set of ROS2 launch files for the WUT velmobil robot launching low-level drivers</description>
    <!-- Package's author -->
    <author email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</author>
    <!-- Package's maintainer -->
    <maintainer email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</maintainer>
    <!-- Package's license -->
    <license>Apache License 2.0</license>

    <!-- Package's build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <!-- Package's runtime dependencies -->
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>launch_common</exec_depend>
    <exec_depend>velmwheel_drivers</exec_depend>

    <!-- Package's exports -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
