<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <!-- Package's name -->
    <name>velmwheel_laser_driver</name>
    <!-- Package's version -->
    <version>0.0.0</version>
    <!-- Package's description -->
    <description>Package providing launchfiles starting producer's drivers of SICK LIDAR sensors preconfigured for WUT Velmwheel robot</description>
    <!-- Package's author -->
    <author email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</author>
    <!-- Package's maintainer -->
    <maintainer email="krzysztof.pierczyk@gmail.com">Krzysztof Pierczyk</maintainer>
    <!-- Package's license -->
    <license>MIT</license>

    <!-- Package's build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <!-- Package's build dependencies -->
    <build_depend>tf2_eigen</build_depend>
    <build_depend>lms1xx</build_depend>
    <!-- Package's runtime dependencies -->
    <exec_depend>tf2_eigen</exec_depend>
    <exec_depend>lms1xx</exec_depend>
    <exec_depend>sick_scan</exec_depend>
    <exec_depend>velmwheel_common</exec_depend>
    <!-- Package's runtime dependencies (launch) -->
    <exec_depend>velmwheel_launch</exec_depend>

    <!-- Package's exports -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>